[gd_scene load_steps=3 format=3 uid="uid://bale1cw3my7bv"]

[ext_resource type="Script" path="res://pause_2.gd" id="1_3gkqs"]
[ext_resource type="Script" path="res://resumeGame.gd" id="2_fyoro"]

[node name="pause2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gkqs")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.406
anchor_top = 0.311
anchor_right = 0.594
anchor_bottom = 0.767
offset_left = 120.32
offset_top = 136.08
offset_right = -120.32
offset_bottom = -192.24
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resumeGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume Game"
script = ExtResource("2_fyoro")

[node name="save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/resumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
